* Allow the fixture transaction to be joined to avoid savepoint use (Bryan Helkamp)
* Show scenario and step summary in HTML formatter (#285 Joseph Wilk)
* Ast::Table can now be constructed with an Array of Hash. (Aslak Hellesøy)

=== Changed features
* The #announce method will no longer escape HTML if the html formatter is used. Escaping must be done manually. (Aslak Hellesøy)

=== Bugfixes
* "--format rerun", with a Scenario Outline, kills cucumber (#492 Aslak Hellesøy)
* Usage formatter is not reporting time correctly. (Elliot Crosby-McCullough)

== 0.4.2 2009-10-14

Bugfix release. The 0.4.1 release was hosed when switching from Hoe to Jeweler.

== 0.4.1 2009-10-14

This is mostly a bugfix release. Some of Cucumber's own features have been fixed so they pass on more platforms,
making it easier for people to contribute. The README.txt also describes how to get up and running with the
development environment.

=== Bugfixes
* Cucumber's features verified passing on MRI 1.8.6 (OSX), 1.8.7 (OSX), 1.9.1 (OSX/Win) and JRuby 1.4.0RC1 (OSX). (Aslak Hellesøy)
* Ensure no errors are raised when limiting with tags which are not in the feature set (#464 Joseph Wilk)
* Missing Romanian keywords added for Examples, Scenario Outline and Background (to my best google translate knowledge) (Aslak Hellesøy)
* Make rerun and --drb work together again after formatter API changes (#485 Erik Hansson, John Ferlito)

=== New Features
* The Rails cucumber generator will only default to RSpec if installed. And print better help. (Aslak Hellesøy)
* Added 'but' variants to Japanese. (Kakutani Shintaro)
* README.txt explains people how to run all tests. Install gems with geminstaller. (Aslak Hellesøy)
* Added support for Serbian language, both Cyrillic and Latin with usage examples. (Dejan Dimic)
* Add new 'debug' formatter for debugging and visualising the calls to listeners. (Matt Wynne)

=== Changed features